Wed Feb 28 19:24:51 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/extra.[ch] libxslt/transform.[ch] libxslt/xsltInternals.h:
	  added xsltDocumentElem implementing multiple file output,
	  including 1.1 xsl:document but yet untested.

Wed Feb 28 00:03:44 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/extensions.c: fixed stoopid bug
	* libxslt/Makefile.am libxslt/extra.[ch]: added a new module
	  carrying extensions to the specification. Added node-set()
	  for existing saxon and xt namespaces and debug() in libxslt
	  namespace (http://xmlsoft.org/XSLT/namespace)
	* libxslt/xsltutils.[ch] transform.c: moved xsltDebug to extra.c
	  plus cleanup.
	* configure.in tests/Makefile.am tests/namespaces: added some
	  namespaces tests, including a test calling the extra debugging
	  function in libxslt namespace, worked first time !!!

Tue Feb 27 16:15:47 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xslt.c: extension prefix support for the full stylesheet
	* libxslt/transform.c libxslt/extensions.[ch]: more work should
	  start working

Mon Feb 26 22:59:44 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* doc/xslt.html : cleaned up, added a bit more description on
	  the API section.

Mon Feb 26 09:41:04 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/Makefile.am libxslt/extensions.[ch]: started working
	  on functions and element extensions. First on list will be
	  a document element.

Sun Feb 25 06:52:14 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* configure.in libxslt.spec.in: releasing 0.3.0
	* doc/xslt.html: updated
	
Sun Feb 25 05:28:30 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* configure.in tests/docbook/html : oops forgot to add
	  the stylesheets themselves :-\

Sun Feb 25 04:51:33 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* configure.in tests/Makefile.am tests/docbook tree:
	  added docbook XSL based test suite
