@@ -1,6 +1,6 @@
 AC_INIT(libxslt/xslt.c)
 
-VERSION=0.3.0
+VERSION=0.4.0
 PACKAGE=libxslt
 
 AM_CONFIG_HEADER(config.h)
@@ -95,7 +95,7 @@ dnl
 dnl find libxml
 dnl
 XML_CONFIG="xml2-config"
-AC_MSG_CHECKING(for libxml libraries >= 2.3.2) 
+AC_MSG_CHECKING(for libxml libraries >= 2.3.3) 
 if test "x$LIBXML_PREFIX" != "x"
 then
 	if ${LIBXML_PREFIX}/bin/xml2-config --libs print > /dev/null 2>&1
@@ -112,13 +112,13 @@ dnl
 if test "x$XML_CONFIG" != "x"
 then
 	vers=`$XML_CONFIG --version | sed -e 's/libxml //' | awk 'BEGIN { FS = "."; } { printf "%d", ($1 * 1000 + $2) * 1000 + $3;}'`
-	if test "$vers" -ge 2003002
+	if test "$vers" -ge 2003003
 	then
 		LIBXML_LIBS="`$XML_CONFIG --libs`"
 		LIBXML_CFLAGS="`$XML_CONFIG --cflags`"
 		AC_MSG_RESULT(found)
 	else
-		AC_MSG_ERROR(You need at least libxml 2.3.2 for this version of libxslt)
+		AC_MSG_ERROR(You need at least libxml 2.3.3 for this version of libxslt)
 	fi
 else
 	AC_MSG_ERROR(Could not find libxml2 anywhere, check ftp://xmlsoft.org/.)
