@@ -151,6 +151,15 @@ platform, get in touch with me to upload the package. I will keep them in the
 href="http://cvs.gnome.org/lxr/source/libxslt/ChangeLog">Changelog</a> file
 for a really accurate description</h3>
 
+<h3>0.4.0: Mar 1 2001</h3>
+<ul>
+  <li>fourth beta test, released at the same time of libxml2-2.3.3</li>
+  <li>bug fixes</li>
+  <li>some optimization</li>
+  <li>started implement extension support, not finished</li>
+  <li>implemented but not tested multiple file output</li>
+</ul>
+
 <h3>0.3.0: Feb 24 2001</h3>
 <ul>
   <li>third beta test, released at the same time of libxml2-2.3.2</li>
