@@ -10,15 +10,15 @@ Copyright: LGPL
 Group: Development/Libraries
 Source: ftp://xmlsoft.org/XSLT/libxslt-%{ver}.tar.gz
 BuildRoot: /var/tmp/libxslt-%{PACKAGE_VERSION}-root
-Requires: libxml2 >= 2.3.2
+Requires: libxml2 >= 2.3.3
 
-URL: http://xmlsoft.org/
+URL: http://xmlsoft.org/XSLT/
 Docdir: %{prefix}/doc
 
 %description
 This C library allows to transform XML files into other XML files
 (or HTML, text, ...) using the standard XSLT stylesheet transformation
-mechanism. To use it you need to have a version of libxml2 >= 2.3.0
+mechanism. To use it you need to have a version of libxml2 >= 2.3.3
 installed.
 
 %package devel
@@ -30,7 +30,7 @@ Requires: libxml2-devel >= 2.3.2
 %description devel
 This C library allows to transform XML files into other XML files
 (or HTML, text, ...) using the standard XSLT stylesheet transformation
-mechanism. To use it you need to have a version of libxml2 >= 2.3.0
+mechanism. To use it you need to have a version of libxml2 >= 2.3.3
 installed.
 
 %changelog
